<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="robotv.srp.robotv.SettingsActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="IP Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvIPAddress"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:fontFamily="serif" />

        <EditText
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etIPAddress"
            android:hint="Enter IP Address"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/turnon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="84dp"
                android:id="@+id/buttonon"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/toggleoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:id="@+id/buttonoff"
                android:layout_alignBaseline="@+id/buttonon"
                android:layout_alignBottom="@+id/buttonon"
                android:layout_toEndOf="@+id/buttonon" />

            <Button
                android:text="@string/visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:id="@+id/visible"
                android:layout_below="@+id/buttonon"
                android:layout_alignStart="@+id/buttonon" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
